--- a/index.html
+++ b/index.html
@@ -6,18 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Book Generator</title>
     <link rel="stylesheet" href="src/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div>
       <header>
-        <h1>AI Book Recommender</h1>
+        <h1>
+          Book <br />
+          Recommender
+        </h1>
       </header>
       <main>
-        <div id="form-container">
+        <div id="form-container" class="form-container">
           <form>
             <input
               type="text"
-              placeholder="Enter a Genre"
+              placeholder="Enter a Genre..."
               autofocus
               required
               class="prompt"
