updated footer links

--- a/index.html
+++ b/index.html
@@ -42,9 +42,15 @@
       <footer>
         This AI project was coded by
         <a href="https://github.com/LauraCwell" target="blank">Laura Cardwell</a
-        >, is open-source on<a href="#" target="blank"> Github</a>, and hosted
-        on
-        <a href="#" target="blank">Netlify.</a>
+        >, is open-source on<a
+          href="https://github.com/LauraCwell/AI-Book-Generator-"
+          target="blank"
+        >
+          Github</a
+        >, and hosted on
+        <a href="#" target="https://ai-book-recommender.netlify.app/"
+          >Netlify.</a
+        >
       </footer>
     </div>
     <script src="src/app.js"></script>
