--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         >
           Github</a
         >, and hosted on
-        <a href="#" target="https://ai-book-recommender.netlify.app/"
+        <a href="https://ai-book-recommender.netlify.app/" target="blank"
           >Netlify.</a
         >
       </footer>
