updated footer links

--- a/index.html
+++ b/index.html
@@ -41,14 +41,15 @@
       </main>
       <footer>
         This AI project was coded by
-        <a href="https://github.com/LauraCwell" target="blank">Laura Cardwell</a
+        <a href="https://github.com/LauraCwell" target="_blank"
+          >Laura Cardwell</a
         >, is open-source on<a
           href="https://github.com/LauraCwell/AI-Book-Generator-"
-          target="blank"
+          target="_blank"
         >
           Github</a
         >, and hosted on
-        <a href="https://ai-book-recommender.netlify.app/" target="blank"
+        <a href="https://ai-book-recommender.netlify.app/" target="_blank"
           >Netlify.</a
         >
       </footer>
